--- a/GraphSketcher/Model/Info.plist
+++ b/GraphSketcher/Model/Info.plist
@@ -6,22 +6,22 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>$(OMNI_BUNDLE_IDENTIFIER)</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© 2006-2009 The Omni Group</string>
 	<key>NSPrincipalClass</key>
@@ -31,8 +31,7 @@
 		<key>NSUserDefaults</key>
 		<dict>
 			<key>defaultsDictionary</key>
-			<dict>
-			</dict>
+			<dict/>
 		</dict>
 	</dict>
 </dict>
